<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="cyberdemon.spacetravel.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.11"
        android:background="@color/personalColor"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@+id/app_description"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bgx" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title"
            android:text="@string/description"
            android:textAlignment="center" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/start_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/titolo_destinazioni"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/titolo_destinazioni"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <Button
                android:id="@+id/button_sistema_solare"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorAccent"
                android:text="@string/sistema_solare" />

            <Button
                android:id="@+id/button_sistemi_solari_vicini"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="2dp"
                android:background="?android:attr/colorActivatedHighlight"
                android:text="@string/sistemi_solari_vicini" />

            <Button
                android:id="@+id/button_confine_galassia"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_purple"
                android:text="@string/confini_della_galassia" />

            <Button
                android:id="@+id/button_altre_galassie"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/altre_galassie" />

            <Button
                android:id="@+id/button_altro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/altri_oggeti_stellari" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView_ss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_obj_sistema_solare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/titolo_obj_sis_solare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sistema Solare"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <Button
                android:id="@+id/button_sole"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:text="Sole" />

            <Button
                android:id="@+id/button_mercurio"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Mercurio" />

            <Button
                android:id="@+id/button_venere"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Venere" />

            <Button
                android:id="@+id/button_luna"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Luna" />

            <Button
                android:id="@+id/button_marte"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Marte" />

            <Button
                android:id="@+id/button_giove"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Giove" />

            <Button
                android:id="@+id/button_saturno"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Saturno" />

            <Button
                android:id="@+id/button_urano"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Urano" />

            <Button
                android:id="@+id/button_nettuno"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Nettuno" />

            <Button
                android:id="@+id/button_plutone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Plutone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_near_stars"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/titolo_sist_sol_vicini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sistemi Solari Vicini"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/button_alfa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sistema di Alfa Centaury" />

        <Button
            android:id="@+id/button_bernard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Bernard Star" />

        <Button
            android:id="@+id/button_Luhman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Luhman 16" />

        <Button
            android:id="@+id/butto_wolf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wolf 359" />

        <Button
            android:id="@+id/button_Lalande"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lalande 21185" />

        <Button
            android:id="@+id/button_Sirius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sirio" />

        <Button
            android:id="@+id/button_procione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Procione" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_milky_edge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"></LinearLayout>

    <LinearLayout
        android:id="@+id/layout_other_galaxy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"></LinearLayout>

    <LinearLayout
        android:id="@+id/layout_other_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"></LinearLayout>

    <RelativeLayout
        android:id="@+id/info_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/personalColor"
        app:menu="@menu/navigation" />

</LinearLayout>
